Convert to a Java8 Form for desktop, remove J++ project files, refactor deprecated Applet, button handlers, float conversions, and thread handling.  Add 'go' file to compile and run.